--- a/package.json
+++ b/package.json
@@ -16,8 +16,19 @@
     "url": "https://github.com/olegatortor/foodJS/issues"
   },
   "homepage": "https://github.com/olegatortor/foodJS#readme",
+  "browserslist": [
+    "> 1%"
+  ],
   "devDependencies": {
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "babel-loader": "^9.1.2",
+    "core-js": "^3.27.2",
     "json-server": "^0.17.1",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1"
   }
 }
